--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "clean:reports": "rimraf ./allure-results ./allure-report && mkdirp ./allure-results ./allure-report",
+    "generate:reports": "npx allure generate ./allure-results --clean",
+    "open:reports": "npx allure open ./allure-report",
+    "pretest": "npm run clean:reports",
+    "posttest": "npm run generate:reports && npm run open:reports",
+    "script:to:run": "npx playwright test pom",
+    "test": "npm run script:to:run || npm run posttest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/minamagdi/Playwright-Learning.git"
@@ -18,6 +26,10 @@
   "homepage": "https://github.com/minamagdi/Playwright-Learning#readme",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.1"
+    "@types/node": "^24.3.1",
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.4.1",
+    "mkdirp": "^3.0.1",
+    "rimraf": "^6.0.1"
   }
 }
