--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate:reports": "npx allure generate ./allure-results --clean",
     "open:reports": "npx allure open ./allure-report",
     "pretest": "npm run clean:reports",
-    "posttest": "npm run generate:reports && npm run open:reports",
+    "posttest": "npm run generate:reports",
     "script:to:run": "npx playwright test pom",
     "test": "npm run script:to:run || npm run posttest"
   },
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/minamagdi/Playwright-Learning#readme",
   "devDependencies": {
-    "@playwright/test": "^1.55.0",
+    "@playwright/test": "^1.56.1",
     "@types/node": "^24.3.1",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.1",
