--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: morning playwright pipeline
+name: Playwright Pipeline
 on:
   push:
     branches:
@@ -21,14 +21,16 @@ jobs:
     - name: Run Playwright tests
       run: npm run test
     - name: Upload Playwright Report
-    - uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
+        name: playwright-report
         path: playwright-report/
         retention-days: 30
     - name: Upload allure Report
-    - uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
+        name: allure-report
         path: allure-report/
         retention-days: 30
