--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Pipeline
 on:
-  - schedule:
-      - cron: '0 12 * * *'  # Runs at 09:00 every day
+  schedule:
+    - cron: '0 12 * * *'  # Runs at 12:00 every day
   push:
     branches:
       - '**'
