pagckage .json update

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean:reports": "rimraf ./allure-results ./allure-report && mkdirp ./allure-results ./allure-report",
     "generate:reports": "npx allure generate ./allure-results --clean",
     "open:reports": "npx allure open ./allure-report",
-    "pretest": "npm run clean:reports",
-    "posttest": "npm run generate:reports",
+    "pretest": "npm install && npx playwright install --with-deps && npm run clean:reports",
+    "posttest": "npm run pretest && npm run generate:reports",
     "script:to:run": "npx playwright test actions",
     "test": "npm run script:to:run || npm run posttest"
   },
