--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ node_modules/
 
 # Playwright
 /playwright/.auth/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github\instructions\snyk_rules.instructions.md
