update secrets with env

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ node_modules/
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github\instructions\snyk_rules.instructions.md
+
+
+# .env files
+/.env
