--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^24.3.1",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.4.1",
+    "dotenv": "^17.2.3",
     "mkdirp": "^3.0.1",
     "rimraf": "^6.0.1"
   }
