--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -34,7 +34,7 @@ on:
           - 'firefox'
           - 'webkit'
 jobs:
-  playwright-tests:
+  run-playwright-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -67,3 +67,14 @@ jobs:
         name: allure-report
         path: allure-report/
         retention-days: 30
+  run-sonarqube:
+    name: SonarQube
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
