--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -69,6 +69,7 @@ jobs:
         retention-days: 30
   run-sonarqube:
     name: SonarQube
+    needs: run-playwright-tests
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
